# Coding-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/ui/: add_codes.py  code_list.py  delete_codes.py  edit_testcase.py  editor.py  home.py  judge0.py  problem_preview.py  select_problem.py  verify_testcase.py
src/ui/utils/: chatbot.py  file.py  text.py  vectorDB.py
